# WaveSabre

./: .editorconfig  .gitmodules  CMakeLists.txt
ConvertTheFuck/: CMakeLists.txt  ConvertTheFuck.csproj
ProjectManager/: App.config  CMakeLists.txt  ProjectManager.Designer.cs  ProjectManager.cs  ProjectManager.csproj
ProjectManager/Properties/: Settings.Designer.cs  Settings.settings
Tests/WaveSabreConvertTests/: CMakeLists.txt  WaveSabreConvertTests.csproj
Vsts/Adultery/: AdulteryEditor.cpp  AdulteryVst.cpp
Vsts/Barley/: BarleyEditor.cpp  BarleyEditor.h  BarleyVst.cpp  BarleyVst.h
Vsts/Falcon/: FalconEditor.cpp  FalconVst.cpp
Vsts/Harvester/: HarvesterEditor.cpp  HarvesterEditor.h  HarvesterVst.cpp  HarvesterVst.h
Vsts/Slaughter/: SlaughterEditor.cpp  SlaughterVst.cpp  SlaughterVst.h
Vsts/Smasher/: SmasherVst.cpp  SmasherVst.h
Vsts/Specimen/: SpecimenEditor.cpp  SpecimenEditor.h
Vsts/Striker/: StrikerEditor.cpp  StrikerEditor.h  StrikerVst.cpp  StrikerVst.h
Vsts/Vectron/: OscillatorPlotView.h  PhaseModPlotView.h  VectronEditor.cpp  VectronEditor.h  VectronVst.cpp  VectronVst.h
Vsts/Washington/: WashingtonEditor.cpp  WashingtonEditor.h  WashingtonVst.cpp  WashingtonVst.h
WaveSabreConvert/: CMakeLists.txt  ProjectConverter.cs  Song.cs  SpecimenDecodedChunk.cs  WaveSabreConvert.csproj
WaveSabreCore/: CMakeLists.txt
WaveSabreCore/MiClouds/: CMakeLists.txt
WaveSabreCore/include/: WaveSabreCore.h
WaveSabreCore/include/WaveSabreCore/: Adultery.h  Barley.h  Devices.h  EmscriptenSample.h  ExternalSample.h  Falcon.h  FfmpegSample.h  GmDls.h  GsmSample.h  Harvester.h  Helpers.h  Random.h  SampleFormat.h  SamplePlayer.h  Slaughter.h  Specimen.h  Striker.h  SynthDevice.h  UncompressedSample.h  Vectron.h  Washington.h
WaveSabreCore/include/WaveSabreCore/Deprecated/: Thunder.h
WaveSabreCore/src/: Adultery.cpp  Barley.cpp  EmscriptenSample.cpp  ExternalSample.cpp  Falcon.cpp  FfmpegSample.cpp  GmDls.cpp  GsmSample.cpp  Harvester.cpp  Helpers.cpp  Main.cpp  MxcsrFlagGuard.cpp  NewImpl.cpp  Random.cpp  SamplePlayer.cpp  Slaughter.cpp  Specimen.cpp  Striker.cpp  SynthDevice.cpp  UncompressedSample.cpp  Vectron.cpp  Washington.cpp
WaveSabreCore/src/Deprecated/: Thunder.cpp
WaveSabreEmscripten/: CMakeLists.txt
WaveSabreEmscripten/include/WaveSabreEmscripten/: Song.h  SongRenderer.h
WaveSabreEmscripten/source/: Main.cpp  Main.js  SongRenderer.Track.cpp  SongRenderer.cpp  library.js
WaveSabrePlayerLib/: CMakeLists.txt
WaveSabrePlayerLib/include/WaveSabrePlayerLib/: CriticalSection.h  DirectSoundRenderThread.h  SongRenderer.h
WaveSabrePlayerLib/src/: CriticalSection.cpp  DirectSoundRenderThread.cpp  SongRenderer.cpp
WaveSabreStandAlonePlayer/: main.cpp
WaveSabreVstLib/: CMakeLists.txt
WaveSabreVstLib/include/WaveSabreVstLib/: VstEditor.h
WaveSabreVstLib/src/: VstEditor.cpp
